[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/UI/HeartsBar.gd" type="Script" id=1]
[ext_resource path="res://assets/player/FullHeart.png" type="Texture" id=2]
[ext_resource path="res://assets/player/HalfHeart.png" type="Texture" id=3]
[ext_resource path="res://assets/player/EmptyHeart.png" type="Texture" id=4]
[ext_resource path="res://assets/player/HalfEmptyHeart.png" type="Texture" id=5]

[node name="HUD" type="CanvasLayer"]

[node name="HeartsBar" type="Control" parent="."]
margin_left = 11.0
margin_top = 9.0
margin_right = 1291.0
margin_bottom = 73.0
script = ExtResource( 1 )

[node name="TextureHalfEmptyHeart" type="TextureRect" parent="HeartsBar"]
margin_left = 85.0
texture = ExtResource( 5 )
stretch_mode = 2

[node name="TextureEmptyHeart" type="TextureRect" parent="HeartsBar"]
margin_right = 510.0
margin_bottom = 64.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 2

[node name="TextureHalfHeart" type="TextureRect" parent="HeartsBar"]
margin_right = 340.0
margin_bottom = 64.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 2

[node name="TextureFullHeart" type="TextureRect" parent="HeartsBar"]
margin_right = 170.0
margin_bottom = 64.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
